# 74HCPU

./: .gitmodules  ASM.md  README.md  cpu2.dia  lexeme.txt  panels.txt  short.txt  todo-hw.txt  todo.txt  want.txt
hard/!ADDR_CNT/MUX16bitAndAddrCnt/: MUX16bit.kicad_pcb  MUX16bit.kicad_prl  MUX16bit.kicad_pro  MUX16bit.kicad_sch  sym-lib-table
hard/!ALU/ADD/: .gitignore  ADD.kicad_pcb  ADD.kicad_prl  ADD.kicad_pro  ADD.kicad_sch  ADD.net
hard/!ALU/ADD/gerber/: ADD-B_Cu.gbl  ADD-B_Mask.gbs  ADD-B_Silkscreen.gbo  ADD-Edge_Cuts.gm1  ADD-F_Cu.gtl  ADD-F_Mask.gts  ADD-F_Silkscreen.gto  ADD-NPTH.drl  ADD-PTH.drl
hard/!ALU/ALU_PCB/: .gitignore  ALU.kicad_pcb  ALU.kicad_prl  ALU.kicad_pro  ALU.kicad_sch  ALU.net
hard/!ALU/AND_SMD/: AND.kicad_pcb  AND.kicad_prl  AND.kicad_pro  AND.kicad_sch
hard/!ALU/CMP/: CMP.kicad_pcb  CMP.kicad_prl  CMP.kicad_pro  CMP.kicad_sch
hard/!ALU/LSR/: LSR.kicad_pcb  LSR.kicad_prl  LSR.kicad_pro  LSR.kicad_sch
hard/!ALU/MOV/: MOV.kicad_pcb  MOV.kicad_prl  MOV.kicad_pro  MOV.kicad_sch
hard/!ALU/SWAP/: SWAP.kicad_pcb  SWAP.kicad_prl  SWAP.kicad_pro  SWAP.kicad_sch
hard/!MUL/MUL1/: MUL1.kicad_pcb  MUL1.kicad_prl  MUL1.kicad_pro  MUL1.kicad_sch
hard/!MUL/MUL1/gerber/: MUL1-B_Cu.gbr  MUL1-B_Mask.gbr  MUL1-B_Silkscreen.gbr  MUL1-Edge_Cuts.gbr  MUL1-F_Cu.gbr  MUL1-F_Mask.gbr  MUL1-F_Silkscreen.gbr  MUL1-NPTH.drl  MUL1-PTH.drl
hard/!MUL/MUL1_SMD/: .gitignore  MUL1.dsn  MUL1.kicad_pcb  MUL1.kicad_prl  MUL1.kicad_pro  MUL1.kicad_sch  MUL1.net
hard/!MUL/MUL8x8/: .gitignore  MUL8x8.kicad_pcb  MUL8x8.kicad_prl  MUL8x8.kicad_pro  MUL8x8.kicad_sch  MUL8x8.net
hard/!MUL/MUL8x8/gerber/: MUL8x8-B_Cu.gbr  MUL8x8-B_Mask.gbr  MUL8x8-B_Silkscreen.gbr  MUL8x8-Edge_Cuts.gbr  MUL8x8-F_Cu.gbr  MUL8x8-F_Mask.gbr  MUL8x8-F_Silkscreen.gbr  MUL8x8-NPTH.drl  MUL8x8-PTH.drl
hard/!Ports/Ports/: .gitignore  Ports.kicad_pcb  Ports.kicad_prl  Ports.kicad_pro  Ports.kicad_sch
hard/!RAM/: RAM.kicad_pcb  RAM.kicad_prl  RAM.kicad_pro  RAM.kicad_sch
hard/!REGS/EndPlate/: .gitignore  EndPlate.kicad_pcb  EndPlate.kicad_prl  EndPlate.kicad_pro  EndPlate.kicad_sch  EndPlate.net
hard/!REGS/EndPlate/gerber/: EndPlate-B_Cu.gbr  EndPlate-B_Mask.gbr  EndPlate-B_Paste.gbr  (+9 more)
hard/!REGS/MUX8x1-1bit/: MUX8x1-1bit.kicad_pcb  MUX8x1-1bit.kicad_prl  MUX8x1-1bit.kicad_pro  MUX8x1-1bit.kicad_sch  MUX8x1-1bit.net
hard/!REGS/RegCntLedDualPort/: Reg.kicad_pcb  Reg.kicad_prl  Reg.kicad_pro  Reg.kicad_sch
hard/!REGS/Regs-v5/: Regs-v5.kicad_pcb  Regs-v5.kicad_prl  Regs-v5.kicad_pro
hard/!REGS/Regs-v6/: Regs-v6.kicad_pcb  Regs-v6.kicad_prl  Regs-v6.kicad_pro  Regs-v6.kicad_sch  Regs-v6.net
hard/!ROM/: ROM.kicad_pcb  ROM.kicad_prl  ROM.kicad_pro  ROM.kicad_sch
hard/MUX1/: MUX1.kicad_pcb  MUX1.kicad_prl  MUX1.kicad_pro  MUX1.kicad_sch
hard/MUX8x1-1bit/: MUX8x1-1bit.kicad_pcb  MUX8x1-1bit.kicad_prl  MUX8x1-1bit.kicad_pro
hard/MUX8x1-1bit-inverted/: MUX8x1-1bit.kicad_prl  MUX8x1-1bit.kicad_pro  MUX8x1-1bit.kicad_sch  README.txt
hard/MUX8x1-1bit/gerber/: MUX8x1-1bit-B_Cu.gbr  MUX8x1-1bit-B_Mask.gbr  MUX8x1-1bit-B_Paste.gbr  MUX8x1-1bit-Edge_Cuts.gbr  MUX8x1-1bit-F_Cu.gbr  MUX8x1-1bit-F_Mask.gbr  MUX8x1-1bit-F_Silkscreen.gbr  MUX8x1-1bit-NPTH.drl  MUX8x1-1bit-PTH.drl
soft/: commands.txt  reg.h
soft/74hcpu-llc-build/: CMakeLists.txt  x74HCPU.h  x74HCPU.td  x74HCPUTargetMachine.cpp
soft/74hcpu-llc-build/TargetInfo/: CMakeLists.txt  x74HCPUTargetInfo.cpp  x74HCPUTargetInfo.h
soft/asm/: .gitignore  CMakeLists.txt  assm.cc  assm.h  build.bat  build.sh  error_collector.h  main.cc  preprocessor.cc  preprocessor.h  ptr.h  reg.h  right_val.h  slot_allocator.cc  slot_allocator.h  str_util.cc  str_util.h  unit_tests_assm.cc  unit_tests_cop.cc  unit_tests_dx_consts.cc  unit_tests_names.cc  unit_tests_preprocessor.cc  unit_tests_util.cc
soft/asm/t/: all_ok.asm  glcd.asm
soft/expr/: !  .gitignore  CMakeLists.txt  assemble.cc  assemble.h  backend.cc  backend.h  build.bat  build.sh  compile.cpp  compile.h  data_type.cc  data_type.h  enum_tree.cpp  enum_tree.h  func_guard.cc  func_guard.h  lexer.cc  lexer.h  lexer_unit_tests.cc  main.cc  names.cc  names.h  node.h  node_type.h  nodes.cc  nodes.h  operation.h  optimize.cc  optimize.h  parser.cc  parser.h  parser_unit_tests.cc  plus.cc  plus.cpp  print_tree.cc  print_tree.h  regs_bank.cc  regs_bank.h  regs_bank_unit_tests.cc  (+14 more)
soft/fonts/static/: convert.py
soft/fw/: fw.asm
soft/uC/: access.h  and.h  arith.h  array.h  build.bat  build_ut.bat  const.cc  const.h  env.h  expr.h  lexer.h  logical.h  node.h  not.h  num.h  or.h  parser.cc  parser.h  rel.h  seq.h  stmt.cc  stmt.h  temp.h  token.h  type.h  unary.h
soft/uemul/: .gitignore  CMakeLists.txt  build.bat  build.sh  commands.cc  commands.h  compare.cc  compare.h  cpu.cc  cpu.h  flags.h  names.h  offset2int.cc  offset2int.h  read_hex.cc  read_hex.h  uemul.cc  uemul.cpp  unit_tests.cc
soft/uemul/lcd/: grad.cpp  lcd.py
soft/xmpls/: empty.asm
(+22 files in other folders)
